add pages, html, css, js

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,16 @@
 
     <!-- sytlesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- custom sytlesheets -->
+    <link rel="stylesheet" href="{% static 'css/theme.css' %}">
     {% block extrastylesheets %}{% endblock extrastylesheets %}
   </head>
 
   <body>
+
+    <!-- header -->
+    {% include "_header.html" %}
+
     <!-- content -->
     {% block content %}{% endblock content %}
 
@@ -21,6 +27,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- custom javascript -->
     {% block extrascripts %}{% endblock extrascripts %}
   </body>
 
