add dbmf and accounts apps

--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -23,7 +23,7 @@
           </a>
         </h3>
         <p class="subtitle">A jQuery plugin for creating AJAX driven Django forms in Bootstrap modal.</p>
-        <a href="#">Live Demo</a>
+        <a href="{% url 'dbmf:dbmf' %}">Live Demo</a>
 
         <h3 class="mt-5">
           django-funky-sheets
