--- a/templates/_header.html
+++ b/templates/_header.html
@@ -12,9 +12,9 @@
         <!-- note: columns can be used directly in navbar since it's d-flex -->
         <nav class="navbar navbar-light navbar-expand p-0">
           <ul class="navbar-nav mx-auto">
-            <a class="nav-item nav-link {% if request.resolver_match.url_name == 'index' %}active{% endif %} py-4" href="{% url 'index' %}">About</a>
-            <a class="nav-item nav-link {% if request.resolver_match.url_name == 'open_source' %}active{% endif %} py-4 ml-4 ml-lg-5" href="{% url 'open_source' %}">Open source</a>
-            <a class="nav-item nav-link {% if request.resolver_match.url_name == 'projects' %}active{% endif %} py-4 ml-4 ml-lg-5" href="{% url 'projects' %}">Projects</a>
+            <a class="nav-item nav-link {% if request.resolver_match.url_name == 'index' %}active{% endif %} py-4" href="{% url 'pages:index' %}">About</a>
+            <a class="nav-item nav-link {% if request.resolver_match.url_name == 'open_source' %}active{% endif %} py-4 ml-4 ml-lg-5" href="{% url 'pages:open_source' %}">Open source</a>
+            <a class="nav-item nav-link {% if request.resolver_match.url_name == 'projects' %}active{% endif %} py-4 ml-4 ml-lg-5" href="{% url 'pages:projects' %}">Projects</a>
           </ul>
         </nav>
       </div>
