--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 
     <!-- sytlesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
     <!-- custom sytlesheets -->
     <link rel="stylesheet" href="{% static 'css/theme.css' %}">
     {% block extrastylesheets %}{% endblock extrastylesheets %}
