--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -24,6 +24,7 @@
         </h3>
         <p class="subtitle">A jQuery plugin for creating AJAX driven Django forms in Bootstrap modal.</p>
         <a href="{% url 'dbmf:dbmf' %}">Live Demo</a>
+        <a class="ml-3" href="https://github.com/trco/django-bootstrap-modal-forms/blob/master/README.rst" target="_blank">Docs</a>
 
         <h3 class="mt-5">
           django-funky-sheets
@@ -38,6 +39,7 @@
         </h3>
         <p class="subtitle">Django implementation of Handsontable spreadsheets for CRUD actions.</p>
         <a href="#">Live Demo</a>
+        <a class="ml-3" href="https://github.com/trco/django-funky-sheets/blob/master/README.rst" target="_blank">Docs</a>
       </article>
 
       <article>
