--- a/templates/dbmf/dbmf.html
+++ b/templates/dbmf/dbmf.html
@@ -5,47 +5,62 @@
 
   {% include "dbmf/_modal.html" %}
 
-  <div class="container mt-3">
-    <div class="row">
-      <div class="col">
-        <p class="text-primary">A jQuery plugin for creating AJAX driven Django forms in Bootstrap modal.</p>
-        <h4>
-          <strong>1. Signup form</strong>
-        </h4>
-        <p>Sign up via Bootstrap modal.</p>
-        <div class="row">
+  <div class="container">
+    <div class="row justify-content-center">
+      <section class="col-lg-12 text-center">
+
+        <h1 class="my-4">Django Bootstrap Modal Forms <span>v1.3.1</span></h1>
+        <p class="subtitle">A jQuery plugin for creating AJAX driven Django forms in Bootstrap modal.</p>
+        <a href="https://github.com/trco/django-bootstrap-modal-forms" target="_blank" style="text-decoration: none;">
+          <svg style="" viewbox="0 0 64 64" width="32" height="32">
+            <path
+              stroke-width="0"
+              fill="currentColor"
+              d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12 42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z"></path>
+          </svg>
+        </a>
+        <a class="ml-3" href="https://github.com/trco/django-bootstrap-modal-forms/blob/master/README.rst" target="_blank">Docs</a>
+
+      </section>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <section class="col-lg-8 text-center">
+
+        <h3 class="mt-5">
+          <strong>1. Signup & Login forms</strong>
+        </h3>
+        <p class="subtitle">Sign up & Log in via Bootstrap modal. Sign up first.</p>
+
+        <article class="row">
           <div class="col-12 mb-3">
             <button class="signup-btn btn btn-primary" type="button" name="button">Sign up</button>
-          </div>
-        </div>
-        <h4>
-          <strong>2. Login form</strong>
-        </h4>
-        <p>Log in via Bootstrap modal. Sign up first.</p>
-        <div class="row">
-          <div class="col-12 mb-3">
             {% if not user.is_anonymous %}
+              <a href="{% url 'logout' %}" class="logout-btn btn btn-danger" role="button">Log out</a>
               <span>
                 Your are logged in as
                 <strong>{{ user }}</strong>.
               </span>
-              <a href="{% url 'logout' %}" class="logout-btn btn btn-danger" role="button">Log out</a>
             {% else %}
               <button class="login-btn btn btn-primary" type="button" name="button">Log in</button>
             {% endif %}
           </div>
+        </article>
 
-        </div>
-        <h4>
-          <strong>3. CRUD actions</strong>
-        </h4>
-        <p>Create, Read, Update and Delete books in Bootstrap modal.</p>
+        <h3 class="mt-3">
+          <strong>2. CRUD actions</strong>
+        </h3>
+        <p class="subtitle">Create, Read, Update and Delete books in Bootstrap modal.</p>
 
-        <div class="row">
+        <article class="row">
+
           <div class="col-12 mb-3">
             <button class="create-book btn btn-primary" type="button" name="button">
               <span class="fa fa-plus mr-2"></span>Create book</button>
           </div>
+
           <div class="col-12 mb-3">
             {% if books %}
               <table class="table">
@@ -91,9 +106,10 @@
               <p class="text-primary">No books added yet.</p>
             {% endif %}
           </div>
-        </div>
 
-      </div>
+        </article>
+
+      </section>
     </div>
   </div>
 
@@ -101,28 +117,40 @@
 
 {% block extrascripts %}
   <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typeit/6.0.2/typeit.min.js"></script>
   <script type="text/javascript">
     $(function () {
-      // Log in & Sign up buttons
+
+      // log in & sign up buttons
       $(".login-btn").modalForm({formURL: "{% url 'accounts:login' %}"});
       $(".signup-btn").modalForm({formURL: "{% url 'accounts:signup' %}"});
 
-      // Create book button
+      // create book button
       $(".create-book").modalForm({formURL: "{% url 'dbmf:create_book' %}"});
 
-      // Update book buttons
+      // update book buttons
       $(".update-book").each(function () {
         $(this).modalForm({formURL: $(this).data('id')});
       });
 
-      // Read book buttons
+      // read book buttons
       $(".read-book").each(function () {
         $(this).modalForm({formURL: $(this).data('id')});
       });
 
-      // Delete book buttons
+      // delete book buttons
       $(".delete-book").each(function () {
         $(this).modalForm({formURL: $(this).data('id')});
+      });
+
+      // hide message
+      $(".alert").fadeTo(2000, 500).slideUp(500, function(){
+        $(".alert").slideUp(500);
+      });
+
+      // autofocus to first input field of a modal
+      $('.modal').on('shown.bs.modal', function () {
+        $('form').find('input[type=text]').filter(':visible:first').focus();
       });
 
     });
