--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -38,7 +38,7 @@
           </a>
         </h3>
         <p class="subtitle">Django implementation of Handsontable spreadsheets for CRUD actions.</p>
-        <a href="#">Live Demo</a>
+        <a href="{% url 'dfs:dfs' %}">Live Demo</a>
         <a class="ml-3" href="https://github.com/trco/django-funky-sheets/blob/master/README.rst" target="_blank">Docs</a>
       </article>
 
