update index text

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -28,8 +28,7 @@
   .type("They call me <strong>Trčo</strong>.").pause(1000).delete(29)
   .type("I'm web developer using").break()
   .type("Python, Django, SQL and JavaScript.").pause(1000).delete(60)
-  .type("<strong>Trčo</strong>").pause(1000)
-  .type(" = ").pause(1000)
+  .type("<strong>Trčo</strong>").pause(1000).break()
   .type("Web developer")
   .go();
   </script>
