--- a/templates/pages/about_contact.html
+++ b/templates/pages/about_contact.html
@@ -8,7 +8,7 @@
 
       <h1 class="typewriter my-4"></h1>
 
-      <article>
+      <article class="mb-5">
         <h3 class="mb-5">Hello! My name is <strong>Uroš Trstenjak</strong> and I'm web developer living in Ljubljana, Slovenia.</h3>
         <p class="subtitle">I primarily use <strong>Django</strong> and <strong>Python</strong> together with <strong>Postgres</strong>, <strong>Gunicorn</strong> and <strong>Nginx</strong> for the backend and <strong>JavaScript</strong>, <strong>jQuery</strong> and <strong>Bootstrap</strong> for the frontend. I'm comfortable using Django for all sorts of projects spanning from full CMS websites, database-driven web applications to REST-driven applications.</p>
         <p class="subtitle">The projects I have been working on so far followed the <strong>Agile development</strong> methodology, while I have also studied <strong>Test-Driven Development</strong> with <strong>Python</strong>, <strong>Django</strong> and <strong>Selenium</strong>.</p>
