--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -42,7 +42,7 @@
         <a class="ml-3" href="https://github.com/trco/django-funky-sheets/blob/master/README.rst" target="_blank">Docs</a>
       </article>
 
-      <article>
+      <article class="mb-5">
         <h3 class="mt-5 mb-4"><strong>Contributor</strong></h3>
 
         <h3 class="mb-3">
