--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -8,7 +8,7 @@
 
       <h1 class="typewriter my-4"></h1>
 
-      <article>
+      <article class="mb-5">
         <h3 class="mb-3">
           IDConference
         </h3>
