fix mobile layout and modals

--- a/templates/_navbar_modal.html
+++ b/templates/_navbar_modal.html
@@ -1,6 +1,6 @@
 <!-- navbar modal -->
 <div class="navbar-modal">
-  <div class="modal" id="navbar-modal">
+  <div class="modal" tabindex="-1" role="dialog" id="navbar-modal">
     <div class="container container-fullscreen">
       <div class="row row-fullscreen">
 
