--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -2,7 +2,8 @@ body {
   color: #3c3c3c;
 }
 
-.typewriter {
+.typewriter,
+.typewriter-mobile {
   font-size: 2.5em;
 }
 
@@ -24,10 +25,16 @@ body {
 }
 
 .img-index {
-  position:fixed;
+  position: fixed;
   bottom: 0px;
   display: flex;
-  justify-content: center;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px)  and (orientation: landscape) {
+  .img-index {
+    display: none;
+  }
 }
 
 .custom-toggler .navbar-toggler-icon {
@@ -43,6 +50,21 @@ body {
   cursor: pointer;
 }
 
+.modal-content-dbmf {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.2);
+  border-radius: .3rem;
+  outline: 0;
+}
+
 /* navbar modal */
 @media (max-width: 767px) {
   .container-fullscreen {
@@ -55,7 +77,7 @@ body {
     height: inherit;
   }
 
-  .modal-content {
+  .navbar-modal .modal-content {
     border: 0;
     border-radius: 0;
   }
@@ -89,6 +111,7 @@ body {
   .modal-link {
     color: #3c3c3c;
     font-size: 1.5em;
+    z-index: 1;
   }
 
   .modal-link:focus,
