--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,12 +7,7 @@
     <section class="col-lg-8 text-center">
 
       <article class="d-none d-md-block typewriter mt-5"></article>
-
       <article class="d-md-none typewriter-mobile mt-5"></article>
-
-      <article class="img-index text-center">
-        <img src="http://learn.corel.com/wp-content/uploads/2016/06/double_exposure1.jpg" alt="">
-      </article>
 
     </section>
   </div>
@@ -22,6 +17,8 @@
 
 {% block extrascripts %}
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typeit/6.0.2/typeit.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+
   <script type="text/javascript">
   var typewriter = new TypeIt(".typewriter", {
     speed: 50,
@@ -29,17 +26,25 @@
   })
   .type("They call me <strong>Trčo</strong>.").pause(1000).delete(29)
   .type("I'm web developer using").break()
-  .type("Python, Django, SQL and JavaScript.").pause(1000).delete(60)
-  .type("<strong>Trčo</strong>").pause(1000).break()
-  .type("Web developer")
+  .type("Python, Django & JavaScript.").pause(1000).delete(60)
+  .type("<strong>Trčo</strong>").break().pause(1000)
+  .type("<strong># </strong>").pause(500)
+  .type("<strong>W </strong>").pause(500)
+  .type("<strong>E </strong>").pause(500)
+  .type("<strong>B </strong>").pause(500)
+  .type(" developer")
   .go();
 
   var typewriterMobile = new TypeIt(".typewriter-mobile", {
     speed: 50,
     waitUntilVisible: true
   })
-  .type("<strong>Trčo</strong>").pause(1000).break()
-  .type("Web developer")
+  .type("<strong>Trčo</strong>").break().pause(1000)
+  .type("<strong># </strong>").pause(500)
+  .type("<strong>W </strong>").pause(500)
+  .type("<strong>E </strong>").pause(500)
+  .type("<strong>B </strong>").pause(500)
+  .type(" developer")
   .go();
   </script>
 {% endblock extrascripts %}
