--- a/templates/dbmf/dbmf.html
+++ b/templates/dbmf/dbmf.html
@@ -121,8 +121,7 @@
 {% endblock content %}
 
 {% block extrascripts %}
-  <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typeit/6.0.2/typeit.min.js"></script>
+  <script src="{% static 'js/jquery.bootstrap.modal.forms.min.js' %}"></script>
   <script type="text/javascript">
     $(function () {
 
