--- a/templates/dfs/create_update_movie.html
+++ b/templates/dfs/create_update_movie.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block extrastylesheets %}
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.20.3/handsontable.full.min.css" rel="stylesheet">
+  <link href="{% static 'css/handsontable.full.min.css' %}" rel="stylesheet">
 {% endblock extrastylesheets %}
 
 {% block content %}
