--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -16,21 +17,19 @@
 {% endblock content %}
 
 {% block extrascripts %}
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typeit/6.0.2/typeit.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
-
+  <script type="text/javascript" src="{% static 'js/typeit.min.js' %}"></script>
   <script type="text/javascript">
   var typewriter = new TypeIt(".typewriter", {
     speed: 50,
     waitUntilVisible: true
   })
   .type("They call me <strong>Trčo</strong>.").pause(1000).delete(29)
-  .type("I'm web developer using").break()
-  .type("Python, Django & JavaScript.").pause(1000).delete(60)
-  .type("<strong>Trčo</strong>").break().pause(1000)
-  .type("<strong># </strong>").pause(500)
-  .type("<strong>W </strong>").pause(500)
-  .type("<strong>E </strong>").pause(500)
+  .type("I'm a web developer using").break()
+  .type("Python, Django & JavaScript.").pause(1000).delete(60).pause(500)
+  .type("<strong>Trčo</strong>").pause(1000).break().pause(1000)
+  .type("<strong># </strong>").pause(250)
+  .type("<strong>W </strong>").pause(250)
+  .type("<strong>E </strong>").pause(250)
   .type("<strong>B </strong>").pause(500)
   .type(" developer")
   .go();
@@ -39,10 +38,10 @@
     speed: 50,
     waitUntilVisible: true
   })
-  .type("<strong>Trčo</strong>").break().pause(1000)
-  .type("<strong># </strong>").pause(500)
-  .type("<strong>W </strong>").pause(500)
-  .type("<strong>E </strong>").pause(500)
+  .type("<strong>Trčo</strong>").pause(1000).break().pause(1000)
+  .type("<strong># </strong>").pause(250)
+  .type("<strong>W </strong>").pause(250)
+  .type("<strong>E </strong>").pause(250)
   .type("<strong>B </strong>").pause(500)
   .type(" developer")
   .go();
