--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -65,7 +66,7 @@
 {% endblock content %}
 
 {% block extrascripts %}
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typeit/6.0.2/typeit.min.js"></script>
+  <script type="text/javascript" src="{% static 'js/typeit.min.js' %}"></script>
   <script type="text/javascript">
   var instance = new TypeIt(".typewriter", {
     speed: 50,
