remove cursor in typeit

--- a/templates/pages/about_contact.html
+++ b/templates/pages/about_contact.html
@@ -29,7 +29,8 @@
   <script type="text/javascript">
   var instance = new TypeIt(".typewriter", {
     speed: 50,
-    waitUntilVisible: true
+    waitUntilVisible: true,
+    cursor: false
   })
   .type("About & Contact").go();
   </script>
