--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -70,7 +70,8 @@
   <script type="text/javascript">
   var instance = new TypeIt(".typewriter", {
     speed: 50,
-    waitUntilVisible: true
+    waitUntilVisible: true,
+    cursor: false
   })
   .type("Open source").go();
   </script>
