--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -69,7 +69,8 @@
   <script type="text/javascript">
   var instance = new TypeIt(".typewriter", {
     speed: 50,
-    waitUntilVisible: true
+    waitUntilVisible: true,
+    cursor: false
   })
   .type("Projects").go();
   </script>
