--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -41,6 +41,22 @@
         <p class="subtitle">Django implementation of Handsontable spreadsheets for CRUD actions.</p>
         <a href="{% url 'dfs:create_movie' %}">Live Demo</a>
         <a class="ml-3" href="https://github.com/trco/django-funky-sheets/blob/master/README.rst" target="_blank">Docs</a>
+
+        <h3 class="mt-5">
+          bootstrap-weekpicker
+          <a href="https://github.com/trco/bootstrap-weekpicker" target="_blank" style="text-decoration: none;">
+            <svg style="" viewbox="0 0 64 64" width="32" height="32">
+              <path
+                stroke-width="0"
+                fill="currentColor"
+                d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12 42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z"></path>
+            </svg>
+          </a>
+        </h3>
+        <p class="subtitle">Weekpicker widget for Bootstrap 4 & Bootstrap 3.</p>
+        <a href="{% url 'pages:bootstrap_weekpicker' %}">Live Demo</a>
+        <a class="ml-3" href="https://github.com/trco/bootstrap-weekpicker/blob/master/README.md" target="_blank">Docs</a>
+
       </article>
 
       <article class="mb-5">
