--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -27,12 +27,8 @@
   .type("They call me <strong>Trčo</strong>.").pause(1000).delete(29)
   .type("I'm a web developer using").break()
   .type("Python, Django & JavaScript.").pause(1000).delete(60).pause(500)
-  .type("<strong>Trčo</strong>").pause(1500).break()
-  .type("<strong># </strong>").pause(250)
-  .type("<strong>W </strong>").pause(250)
-  .type("<strong>E </strong>").pause(250)
-  .type("<strong>B </strong>").pause(500)
-  .type(" developer")
+  .type("<strong>Trčo</strong>").break()
+  .type("<strong>WEB</strong> developer")
   .go();
 
   var typewriterMobile = new TypeIt(".typewriter-mobile", {
@@ -40,12 +36,8 @@
     waitUntilVisible: true,
     cursor: false
   })
-  .type("<strong>Trčo</strong>").break().pause(1500)
-  .type("<strong># </strong>").pause(250)
-  .type("<strong>W </strong>").pause(250)
-  .type("<strong>E </strong>").pause(250)
-  .type("<strong>B </strong>").pause(500)
-  .type(" developer")
+  .type("<strong>Trčo</strong>").break()
+  .type("<strong>WEB</strong> developer")
   .go();
   </script>
 {% endblock extrascripts %}
