--- a/templates/dbmf/dbmf.html
+++ b/templates/dbmf/dbmf.html
@@ -9,8 +9,8 @@
     <div class="row justify-content-center">
       <section class="col-lg-12 text-center">
 
-        <h1 class="my-4">Django Bootstrap Modal Forms <span>v1.3.1</span></h1>
-        <p class="subtitle">A jQuery plugin for creating AJAX driven Django forms in Bootstrap modal.</p>
+        <h1 class="my-4">Django Bootstrap Modal Forms <span>v1.4.2</span></h1>
+        <p class="subtitle">A Django plugin for creating AJAX driven forms in Bootstrap modal.</p>
         <a href="https://github.com/trco/django-bootstrap-modal-forms" target="_blank" style="text-decoration: none;">
           <svg style="" viewbox="0 0 64 64" width="32" height="32">
             <path
