move about&contact to the homepage

--- a/templates/_navbar_modal.html
+++ b/templates/_navbar_modal.html
@@ -18,16 +18,13 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-12 pb-4 text-center">
-                      <a class="modal-link" href="{% url 'pages:index' %}">Home</a>
+                      <a class="modal-link" href="{% url 'pages:index' %}">About</a>
                     </div>
                     <div class="col-12 pb-4 text-center">
                       <a class="modal-link" href="{% url 'pages:open_source' %}">Open source</a>
                     </div>
                     <div class="col-12 pb-4 text-center">
                       <a class="modal-link" href="{% url 'pages:projects' %}">Projects</a>
-                    </div>
-                    <div class="col-12 pb-4 text-center">
-                      <a class="modal-link" href="{% url 'pages:about_contact' %}">About & Contact</a>
                     </div>
                   </div><!-- /.row -->
                 </div><!-- /.container -->
