--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
     <!-- custom sytlesheets -->
     <link rel="stylesheet" href="{% static 'css/theme.css' %}">
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     {% block extrastylesheets %}{% endblock extrastylesheets %}
   </head>
 
