update margins, change favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <!-- custom sytlesheets -->
     <link rel="stylesheet" href="{% static 'css/theme.css' %}">
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}"/>
     {% block extrastylesheets %}{% endblock extrastylesheets %}
   </head>
 
