--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,7 +7,7 @@
   <div class="row justify-content-center">
     <section class="col-lg-6 text-center">
 
-      <h1 class="typewriter my-4"></h1>
+      <h1 class="typewriter mt-3 mb-5"></h1>
 
       <article class="mb-5">
         <h3 class="mb-5">My name is <strong>Uroš Trstenjak</strong> and I'm web developer living in Ljubljana, Slovenia.</h3>
