--- a/templates/pages/open_source.html
+++ b/templates/pages/open_source.html
@@ -7,10 +7,10 @@
   <div class="row justify-content-center">
     <section class="col-lg-6 text-center">
 
-      <h1 class="typewriter my-4"></h1>
+      <h1 class="typewriter mt-3 mb-5"></h1>
 
       <article>
-        <h3 class="mb-4"><strong>Author</strong></h3>
+        <h2 class="mb-4">Author</h2>
 
         <h3 class="mb-3">
           django-bootstrap-modal-forms
@@ -60,7 +60,7 @@
       </article>
 
       <article class="mb-5">
-        <h3 class="mt-5 mb-4"><strong>Contributor</strong></h3>
+        <h2 class="mt-5 mb-4">Contributor</h2>
 
         <h3 class="mb-3">
           DynamicForms
