update modal template name

--- a/templates/dbmf/dbmf.html
+++ b/templates/dbmf/dbmf.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-  {% include "dbmf/_modal.html" %}
+  {% include "dbmf/_modal_crud.html" %}
   {% include "dbmf/_modal_auth.html" %}
 
   <div class="container">
